default/pihole/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pihole
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pihole
    spec:
      volumes:
      - name: pihole
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:pihole
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      containers:
      - name: pihole
        image: pihole/pihole:4.2.2-1
        volumeMounts:
        - name: pihole
          subPath: etc-pihole
          mountPath: /etc/pihole
        - name: pihole
          subPath: etc-dnsmasq.d
          mountPath: /etc/dnsmasq.d/
        ports:
        - containerPort: 53
          protocol: UDP
        - containerPort: 53
        - containerPort: 80
