default/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: true
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.10.4
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
  - name: dns-tcp
    port: 53
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: true
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.10.4
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
  - name: dns-udp
    port: 53
    protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-admin
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: true
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.10.5
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
  - name: http
    port: 80
