default/pihole/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pihole-admin
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start"
spec:
  tls:
  - hosts:
    - pihole.desertbluffs.com
  rules:
  - host: pihole.desertbluffs.com
    http:
      paths:
      - backend:
          serviceName: pihole-admin
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pihole-admin-oauth2
  namespace: default
spec:
  tls:
  - hosts:
    - pihole.desertbluffs.com
  rules:
  - host: pihole.desertbluffs.com
    http:
      paths:
      - path: /oauth2
        backend:
          serviceName: oauth2-proxy
          servicePort: oauth2-proxy
