default/pihole/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pihole-dns
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pihole
  ingress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    from: []
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pihole-admin
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pihole
  ingress:
  - ports:
    - port: 80
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
