default/pihole/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pihole
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pihole
  ingress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
    - port: 80
    from: []
